--- a/Templates/run_calc_gradients.template
+++ b/Templates/run_calc_gradients.template
@@ -1,7 +1,7 @@
 #!/bin/bash -l
 #PBS -A UMCP0020
-#PBS -N run_{0}_TI
-#PBS -o Logs/run_{0}_TI.log
+#PBS -N run_{0}_grad
+#PBS -o Logs/run_{0}_grad.log
 #PBS -j oe
 #PBS -l walltime=00:30:00
 #PBS -q casper
@@ -12,7 +12,6 @@
 ### Clear and load all the modules needed
 module --force purge
 module load ncarenv
-module load conda
 
 export TMPDIR=/glade/derecho/scratch/$USER/temp
 mkdir -p $TMPDIR
@@ -20,15 +19,13 @@ mkdir -p $TMPDIR
 ### Run analysis
 proj_dir=/glade/u/home/zhihuaz/Projects/TRACE-SEAS/TracerInversion
 conda activate trace-seas
-#python3 $proj_dir/Tools/invert_tracers_mlR.py -c {0}
-#python3 $proj_dir/Tools/invert_tracers_submeso.py -c {0}
-python3 $proj_dir/Tools/invert_tracers_finescale.py -c {0}
+python3 $proj_dir/Tools/calc_gradients.py -c {0}
 
 ### Overwrite previous log file
-LOG=$proj_dir/Logs/{0}_TI.log
+LOG=$proj_dir/Logs/{0}_grad.log
 if [ -f "$LOG" ]; then
     rm -f $LOG
 fi
-mv $proj_dir/Logs/run_{0}_TI.log $LOG
+mv $proj_dir/Logs/run_{0}_grad.log $LOG
 
-qstat -f $PBS_JOBID >> Logs/{0}_TI.log
+qstat -f $PBS_JOBID >> Logs/{0}_grad.log
